/*!\page PPL6History PPL6 History
PPL6 - HISTORY

Version 6.4.9
  - Kompatibilitätsproblem mit OpenSSL 1.x.x behoben
  - CTCPSocket::Bind kann nun mehrfach aufgerufen werden, um einen
    Socket an mehrere Adressen oder Ports zu binden.
  - Funktion StartThread, um einen einen Thread ohne Verwendung der
    Klasse CThread zu starten

Version 6.4.8 vom 27.07.2011	(CVS-Tag: REL_6_4_8)
  - Datenbankklassen: Neue Funktion "databaseType"
  - Bugfix in Compression-Klasse: bei Verwendung des V2-Prefix
    wurde beim Komprimieren statt Länge der unkomprimierten Daten
    die Länge der komprimierten Daten geschrieben
  - Bugfix in Datenbank-Connect-Funktion. Fehlerhaften "ifdef" für
    Postgres korrigiert
  - Bugfix in Postgres-Escape-Funktion. Das letzte Zeichen des
    Strings wird nun nicht mehr abgeschnitten.

Version 6.4.7 vom 25.05.2011	(CVS-Tag: REL_6_4_7)
  - CDateTime holt sich nun die Millisekunden via "gettimeofday",
    sofern die Funktion vorhanden ist. Bei der Ausgabe mit
    "get" wird nun der Platzhalter "%*" unterstützt, der durch die
    Millisekunden ersetzt wird.
  - Überarbeitung und Vereinfachung der Exception-Klasse
  - Neue Klasse: CIcecast zum Streamen von MP3 oder OGG Dateien
    an einen Icecast Server
  - Update der Dokumentation auf Doxygen 1.7.3
  - CAssocArray unterstützt nun CDateTime und kann CWString Im- und
    Exportieren (es erfolgt eine Konvertierung nach UTF-8)

Version 6.4.6 vom 17.03.2011	(CVS-Tag: REL_6_4_6)
  - CAssocArray hat Copy-Konstruktor und Zuweisungsoperator für CArray
    erhalten.
  - CDateTime vollständig dokumentiert
  - CDir verwendet nun unter Windows die Wide-Character-Funktionen
    zum Einlesen eines Verzeichnisses. Dadurch sollte es jetzt keine
    Probleme mehr mit Nicht-US-ASCII-Zeichen im Dateinamen geben.
  - Bugfix in CWikiParser: Bei der Darstellung von Sourcecode fehlt
    das schließende "</div>".
  - CTree hat neue const-Funktionen zum Rückwärtsdurchwandern des
    Baums mittels CTreeWalker