@@ -4,7 +4,7 @@ DEFS="@DEFS@"
 CFLAGS="@CFLAGS@ @PTHREAD_CFLAGS@"
 CPPFLAGS="@CPPFLAGS@"
 LDFLAGS="@LDFLAGS@"
-LIBS="@LIBS@ @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @ZLIB_LIBS@ @BZ2_LIBS@ @PCRE_LIBS@ @X_PRE_LIBS@ @X_LIBS@ @MYSQL_LIBS@ @POSTGRESQL_LDFLAGS@ @SYBASE_LIBS@ @openssl_libs@ @LIBCURL@ @ICONV_LIBS@ @MPG123_LIBS@ @LAME_LIBS@ @MAD_LIBS@ @GRAPHIC_LIBS@ @SOUND_LIBS@ @LIBMCRYPT_LIBS@ @LIBMHASH_LIBS@ @LIBLDNS_LIBS@ @SHOUT_LIBS@ @OGG_LIBS@"
+LIBS="@LIBS@ @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @ZLIB_LIBS@ @BZ2_LIBS@ @PCRE_LIBS@ @X_PRE_LIBS@ @X_LIBS@ @MYSQL_LIBS@ @POSTGRESQL_LDFLAGS@ @SYBASE_LIBS@ @openssl_libs@ @LIBCURL@ @ICONV_LIBS@ @MPG123_LIBS@ @LAME_LIBS@ @MAD_LIBS@ @GRAPHIC_LIBS@ @SOUND_LIBS@ @LIBMCRYPT_LIBS@ @LIBMHASH_LIBS@ @LIBLDNS_LIBS@ @SHOUT_LIBS@ @OGG_LIBS@ @LIBMICROHTTPD_LIBS@"
 BASELIBS="@LIBS@ @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @ZLIB_LIBS@ @BZ2_LIBS@ @PCRE_LIBS@ @ICONV_LIBS@ @LIBMCRYPT_LIBS@ @LIBMHASH_LIBS@ @LIBLDNS_LIBS@"
 LIBNAME="libppl6"
 LIBDEBUG="libppl6-debug"
@@ -211,6 +211,9 @@ if test "$listfeatures" = "yes"; then
 	fi
 	if [ "@report_have_ldns@" = "yes" ]; then
 		echo "ldns"
+	fi
+	if [ "@report_have_libmicrohttpd@" = "yes" ]; then
+		echo "libmicrohttpd"
 	fi
 	
 	exit
